--- a/src/app/shared/components/filters/filters.component.html
+++ b/src/app/shared/components/filters/filters.component.html
@@ -12,7 +12,7 @@
           <nz-space [nzSize]="15">
             <label *nzSpaceItem nz-radio-button [nzValue]="'ALL'" (click)="resetAllFilters()">Toutes</label>
             <label *nzSpaceItem nz-radio-button [nzValue]="'OK'">OK</label>
-            <label *nzSpaceItem nz-radio-button [nzValue]="'EN_ATTENTE'">En Attente</label>
+            <label *nzSpaceItem nz-radio-button [nzValue]="'EN_ATTENTE'" style="white-space: nowrap;">En Attente</label>
             <label *nzSpaceItem nz-radio-button [nzValue]="'VIDE'">Vide</label>
           </nz-space>
         </nz-radio-group>
