--- a/src/app/root/shell/analyse/analyse.component.html
+++ b/src/app/root/shell/analyse/analyse.component.html
@@ -1,24 +1,13 @@
-<div class="carburant-table-holder">
-    <nz-table #basicTable [nzData]="listOfData" [nzLoading]="true" [nzNoResult]="'En cours...'">
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Age</th>
-            <th>Address</th>
-            <th>Action</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let data of basicTable.data">
-            <td>{{ data.name }}</td>
-            <td>{{ data.age }}</td>
-            <td>{{ data.address }}</td>
-            <td>
-              <a>Action 一 {{ data.name }}</a>
-              <nz-divider nzType="vertical"></nz-divider>
-              <a>Delete</a>
-            </td>
-          </tr>
-        </tbody>
-      </nz-table>    
+<div style="width: 100%; max-width: 1150px; margin: auto; padding: 40px 20px;">
+  <h2 style="text-align: center; font-size: 26px; font-weight: bold; color: black; margin-bottom: 30px;">
+    Statistiques Mensuelles des Factures
+  </h2>
+
+  <canvas
+    baseChart
+    [data]="barChartData"
+    [options]="barChartOptions"
+    [type]="'bar'"
+    height="90"
+  ></canvas>
 </div>
