--- a/src/app/root/auth/login/login.component.html
+++ b/src/app/root/auth/login/login.component.html
@@ -1,22 +1,48 @@
-<form nz-form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="login-form">
-    <nz-form-item>
-        <nz-form-label [nzSpan]="6" nzFor="username" nzRequired>Nom d'utilisateur</nz-form-label>
-        <nz-form-control [nzSpan]="14" nzErrorTip="Nom d'utilisateur requis">
-          <input nz-input id="username" formControlName="username" />
-        </nz-form-control>>
-    </nz-form-item>
+<div class="login-page-container">
+    <div class="login-box">
+      <div class="login-left">
+        <h2>Login please</h2>
   
-    <nz-form-item>
-      <nz-form-label [nzSpan]="6" nzFor="password" nzRequired>Mot de passe</nz-form-label>
-      <nz-form-control [nzSpan]="14" nzErrorTip="Mot de passe requis">
-        <input nz-input id="password" formControlName="password" type="password" />
-      </nz-form-control>
-    </nz-form-item>
+        <form nz-form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
   
-    <nz-form-item>
-      <nz-form-control [nzSpan]="14" [nzOffset]="6">
-        <button nz-button nzType="primary" [disabled]="loginForm.invalid">Se connecter</button>
-      </nz-form-control>
-    </nz-form-item>
-  </form>
+          <nz-form-item>
+            <nz-form-control [nzSpan]="24" nzErrorTip="Nom d'utilisateur requis">
+              <nz-input-group [nzPrefix]="userIcon">
+                <input nz-input formControlName="username" placeholder="Input your user ID or Email" />
+              </nz-input-group>
+              <ng-template #userIcon>
+                <i nz-icon nzType="user"></i>
+              </ng-template>
+            </nz-form-control>
+          </nz-form-item>
+  
+          <nz-form-item>
+            <nz-form-control [nzSpan]="24" nzErrorTip="Mot de passe requis">
+              <nz-input-group [nzPrefix]="lockIcon">
+                <input nz-input formControlName="password" type="password" placeholder="Input your password" />
+              </nz-input-group>
+              <ng-template #lockIcon>
+                <i nz-icon nzType="lock"></i>
+              </ng-template>
+            </nz-form-control>
+          </nz-form-item>
+  
+   
+  
+          <button nz-button nzType="primary" [disabled]="loginForm.invalid" class="login-btn">
+            <i nz-icon nzType="login"></i> LOG IN
+          </button>
+        </form>
+      </div>
+  
+      <div class="login-right">
+
+        <img src="assets/images/logo-station-sync.jpeg" alt="Station Sync Logo" class="logo-image" />
+
+        <h2>WELCOME!</h2>
+        <p>Enter your details and start journey with us</p>
+        <button nz-button nzType="default" routerLink="/auth/register">SIGNUP</button>
+      </div>
+    </div>
+  </div>
   
