--- a/src/app/root/home/home.component.scss
+++ b/src/app/root/home/home.component.scss
@@ -36,3 +36,15 @@
     font-weight: 900;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+.redirect-btn{
+    margin-top: 20px;
+}
+
+.column-holder{
+    font-weight: bold;
+}
+
+.last-update-holder{
+    margin-top: 25px;
+}
