--- a/src/app/shared/components/commun/breadcrumb/breadcrumb.component.html
+++ b/src/app/shared/components/commun/breadcrumb/breadcrumb.component.html
@@ -1,6 +1,6 @@
 <nz-breadcrumb>
     <nz-breadcrumb-item *ngFor="let pathName of pathNames">
-        <a *ngIf="pathName === ''" routerLink="/">
+        <a *ngIf="pathName === ''" routerLink="/home">
             <span>Accueil</span>
         </a>
         <a>
