--- a/src/app/root/home/home.component.html
+++ b/src/app/root/home/home.component.html
@@ -1,56 +1,106 @@
 <div class="home-content-holder">
     <div class="home-stats-holder">
-        <div class="today-levy-indicator" (click)="goToBank()">
+
+        <!--FACTURES-->
+        <div class="today-levy-indicator">
             <img class="image-indicator" src="../../../assets/images/invoice.svg">
-            <h3>
-                Factures
-            </h3>
-            <div *ngIf="elementLoading" class="spinner-holder">
+            <h3>{{'GENERAL.INVOICES' | translate}}</h3>
+
+            <div *ngIf="totalShellsLoading; else totalShellsReady" class="spinner-holder">
                 <nz-spin nzSize="large"></nz-spin>
             </div>
-            <h3>
-                <span class="text-indicator">{{ totalShells }}</span>
-            </h3>
-                <nz-collapse>
-                      <nz-collapse-panel [nzActive]="true">
-                        <p>
-                            hello
-                        </p>
-                      </nz-collapse-panel>
-                </nz-collapse>
-        </div>
-        <div class="fuel-invoice-indicator">
-            <img class="image-indicator" src="../../../assets/images/fuel.svg">
-            <h3>
-                Factures Carburant
-            </h3>
-            <h3>
-                <span class="text-indicator">5</span>
-            </h3>
-            <nz-collapse>
-                <nz-collapse-panel nzHeader="Détails" nzActive="true">
-                  <p>
-                      hello
-                  </p>
+            <ng-template #totalShellsReady>
+                <h3>
+                    <span class="text-indicator">{{ totalShells }}</span>
+                </h3>
+            </ng-template>
+           
+            <nz-collapse class="last-update-holder">
+                <nz-collapse-panel nzHeader="Dernière Facture" [nzActive]="true">
+                    <div nz-row class="column-holder">
+                        <div nz-col nzSpan="8">Date</div>
+                        <div nz-col nzSpan="8">Nature</div>
+                        <div nz-col nzSpan="8">Montant</div>
+                    </div>
+                    <div nz-row>
+                        <div nz-col nzSpan="8">{{lastShells[0].dateOperation | date:'d MMMM y':'':'fr-FR' }}</div>
+                        <div nz-col nzSpan="8">{{lastShells[0].natureOperation}}</div>
+                        <div nz-col nzSpan="8">{{lastShells[0].montant}}</div>
+                    </div>
                 </nz-collapse-panel>
             </nz-collapse>
             
+            <div class="redirect-btn">
+                <button nz-button nzType="primary" (click)="handleRedirect('factures')">{{'GENERAL.DETAILS' | translate}}</button>
+            </div>
         </div>
-        <div class="oil-invoice-indicator">
+
+        <!--OPERATIONS-->
+        <div class="fuel-invoice-indicator">
             <img class="image-indicator" src="../../../assets/images/fuel.svg">
-            <h3>
-                Factures huile
-            </h3>
-            <h3>
-                <span class="text-indicator">5</span>
-            </h3>
-            <nz-collapse>
-                <nz-collapse-panel [nzActive]="true">
-                  <p>
-                      hello
-                  </p>
+            <h3>{{'GENERAL.OPERATIONS' | translate}}</h3>
+
+            <div *ngIf="totalOperationsLoading; else totalOperationsReady" class="spinner-holder">
+                <nz-spin nzSize="large"></nz-spin>
+            </div>
+            <ng-template #totalOperationsReady>
+                <h3>
+                    <span class="text-indicator">{{ totalOperations }}</span>
+                </h3>
+            </ng-template>
+            
+            <nz-collapse class="last-update-holder">
+                <nz-collapse-panel nzHeader="Dernière Opération" nzActive="true">
+                    <div nz-row class="column-holder">
+                        <div nz-col nzSpan="8">Date</div>
+                        <div nz-col nzSpan="8">Nature</div>
+                        <div nz-col nzSpan="8">Montant</div>
+                    </div>
+                    <div nz-row>
+                        <div nz-col nzSpan="8">{{lastOperations[0].dateOperation | date:'d MMMM y':'':'fr-FR' }}</div>
+                        <div nz-col nzSpan="8">{{lastOperations[0].natureOperationBank}}</div>
+                        <div nz-col nzSpan="8">{{lastOperations[0].montant}}</div>
+                    </div>
                 </nz-collapse-panel>
             </nz-collapse>
+            
+            <div class="redirect-btn">
+                <button nz-button nzType="primary" (click)="handleRedirect('operations')">{{'GENERAL.DETAILS' | translate}}</button>
+            </div>
+        </div>
+
+        <!--PRELEVEMENTS-->
+        <div class="oil-invoice-indicator">
+            <img class="image-indicator" src="../../../assets/images/fuel.svg">
+            <h3>{{'GENERAL.WITHDRAWALS' | translate}}</h3>
+          
+            <div *ngIf="totalPrelevementLoading; else totalPrelevementReady" class="spinner-holder">
+                <nz-spin nzSize="large"></nz-spin>
+            </div>
+            <ng-template #totalPrelevementReady>
+                <h3>
+                    <span class="text-indicator">{{ totalPrelevement }}</span>
+                </h3>
+            </ng-template>
+            
+            <nz-collapse class="last-update-holder">
+                <nz-collapse-panel nzHeader="Dernier Prélèvement" [nzActive]="true">
+                    <div nz-row class="column-holder">
+                        <div nz-col nzSpan="8">Date</div>
+                        <div nz-col nzSpan="8">Num. Commpte</div>
+                        <div nz-col nzSpan="8">Montant</div>
+                    </div>
+                    <div nz-row>
+                        <div nz-col nzSpan="8">{{lastPrelevements[0].dateOperation | date:'d MMMM y':'':'fr-FR' }}</div>
+                        <div nz-col nzSpan="8">{{lastPrelevements[0].numeroCompte}}</div>
+                        <div nz-col nzSpan="8">{{lastPrelevements[0].montant}}</div>
+                    </div>
+                </nz-collapse-panel>
+            </nz-collapse>
+            
+            <div class="redirect-btn">
+                <button nz-button nzType="primary" (click)="handleRedirect('prelevements')">{{'GENERAL.DETAILS' | translate}}</button>
+            </div>
         </div>
     </div>
 </div>
